2009-02-22  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/GradientXYBarPainter.java
    (paintBar): Use correct outline paint.

2009-02-13  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/jxlayer/Crosshair.java: New file,
    * source/org/jfree/chart/jxlayer/CrosshairLabelGenerator.java: New file,
    * source/org/jfree/chart/jxlayer/CrosshairLayerUI.java: New file,
    * source/org/jfree/chart/jxlayer/DefaultCrosshairLabelGenerator.java:
    New file,
    * source/org/jfree/chart/jxlayer/package.html: New file,
    * tests/org/jfree/chart/jxlayer/junit/CrosshairTests.java: New tests,
    * tests/org/jfree/chart/jxlayer/junit/JXLayerPackageTests.java: Likewise.

2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYPointerAnnotation.java
    (draw): Added support for rotated text, plus background paint and
    outline paint/stroke.

2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/annotations/XYTextAnnotation.java
    (backgroundPaint): New field,
    (outlineVisible): Likewise,
    (outlinePaint): Likewise,
    (outlineStroke): Likewise,
    (XYTextAnnotation): Initialise new fields,
    (getBackgroundPaint): New method,
    (setBackgroundPaint): Likewise,
    (getOutlinePaint): Likewise,
    (setOutlinePaint): Likewise,
    (getOutlineStroke): Likewise,
    (setOutlineStroke): Likewise,
    (isOutlineVisible): Likewuse,
    (setOutlineVisible): Likewise,
    (draw): Draw background and outline,
    (equals): Check new fields,
    (writeObject): Handle new fields,
    (readObject): Likewise.

2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/general/DatasetUtilities.java
    (sampleFunction2D): Delegate to new method,
    (sampleFunction2DToSeries): New method,
    * source/org/jfree/data/function/NormalDistributionFunction2D.java