@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ---------------------------
  * RendererUtilitiesTests.java
  * ---------------------------
- * (C) Copyright 2007, 2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2007-2009, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -157,7 +157,7 @@ public class RendererUtilitiesTests extends TestCase {
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 1.0,
                 2.2));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 2.0,
                 3.3));
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 3.0,
                 4.4));
@@ -168,9 +168,9 @@ public class RendererUtilitiesTests extends TestCase {
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 1.0,
                 2.2));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 3, 2.0,
                 3.3));
-        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 3, 3.0,
+        assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 3, 3.0,
                 4.4));
 
         // check a series with four items
@@ -180,12 +180,24 @@ public class RendererUtilitiesTests extends TestCase {
                 1.1));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.0,
                 2.2));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.0,
                 3.3));
-        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 4, 3.0,
+        assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 4, 3.0,
                 4.4));
-        assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 4, 4.0,
+        assertEquals(3, RendererUtilities.findLiveItemsLowerBound(d, 4, 4.0,
                 5.5));
+
+        // check a series with repeating items
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 2.0, 2.0, 3.0}, {2.0, 2.0,
+                2.0, 2.0, 2.0}});
+        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.0,
+                4.0));
+        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.0,
+                4.0));
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.0,
+                4.0));
+        assertEquals(4, RendererUtilities.findLiveItemsLowerBound(d, 4, 3.0,
+                4.0));
 
     }
 
@@ -217,7 +229,7 @@ public class RendererUtilitiesTests extends TestCase {
         d.addSeries("S3", new double[][] {{2.0, 1.0}, {2.0, 2.0}});
         assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.1,
                 0.5));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.1,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 2, 0.1,
                 1.0));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 2, 1.1,
                 2.0));
@@ -228,9 +240,9 @@ public class RendererUtilitiesTests extends TestCase {
 
         // check a series with three items
         d.addSeries("S4", new double[][] {{3.0, 2.0, 1.0}, {2.0, 2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 3, 0.0,
+        assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 3, 0.0,
                 1.0));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 1.0,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 3, 1.0,
                 2.0));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 3, 2.0,
                 3.0));
@@ -242,16 +254,28 @@ public class RendererUtilitiesTests extends TestCase {
                 2.0, 2.0}});
         assertEquals(3, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.1,
                 0.5));
-        assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.1,
+        assertEquals(3, RendererUtilities.findLiveItemsLowerBound(d, 4, 0.1,
                 1.0));
-        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.1,
+        assertEquals(2, RendererUtilities.findLiveItemsLowerBound(d, 4, 1.1,
                 2.0));
-        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.2,
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 4, 2.2,
                 3.0));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 3.3,
                 4.0));
         assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 4, 4.4,
                 5.0));
+
+        // check a series with repeating items
+        d.addSeries("S6", new double[][] {{3.0, 2.0, 2.0, 2.0, 1.0}, {2.0, 2.0,
+                2.0, 2.0, 2.0}});
+        assertEquals(0, RendererUtilities.findLiveItemsLowerBound(d, 5, 0.0,
+                3.0));
+        assertEquals(1, RendererUtilities.findLiveItemsLowerBound(d, 5, 0.0,
+                2.0));
+        assertEquals(4, RendererUtilities.findLiveItemsLowerBound(d, 5, 0.0,
+                1.0));
+        assertEquals(4, RendererUtilities.findLiveItemsLowerBound(d, 5, 0.0,
+                0.5));
     }
 
     /**
@@ -336,7 +360,7 @@ public class RendererUtilitiesTests extends TestCase {
 
         // check a series with two items
         d.addSeries("S3", new double[][] {{1.0, 2.0}, {2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 2, 0.0,
                 1.0));
         assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 2, 1.0,
                 2.2));
@@ -347,9 +371,9 @@ public class RendererUtilitiesTests extends TestCase {
 
         // check a series with three items
         d.addSeries("S4", new double[][] {{1.0, 2.0, 3.0}, {2.0, 2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 3, 0.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 3, 0.0,
                 1.1));
-        assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 1.0,
+        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 3, 1.0,
                 2.2));
         assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 3, 2.0,
                 3.3));
@@ -359,16 +383,28 @@ public class RendererUtilitiesTests extends TestCase {
         // check a series with four items
         d.addSeries("S5", new double[][] {{1.0, 2.0, 3.0, 4.0}, {2.0, 2.0,
                 2.0, 2.0}});
-        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
                 1.1));
-        assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 4, 1.0,
+        assertEquals(1, RendererUtilities.findLiveItemsUpperBound(d, 4, 1.0,
                 2.2));
-        assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 2.0,
+        assertEquals(2, RendererUtilities.findLiveItemsUpperBound(d, 4, 2.0,
                 3.3));
         assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 3.0,
                 4.4));
         assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 4.0,
                 5.5));
+
+        // check a series with repeating items
+        d.addSeries("S5", new double[][] {{1.0, 2.0, 2.0, 2.0, 3.0}, {2.0, 2.0,
+                2.0, 2.0, 2.0}});
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
+                1.0));
+        assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
+                2.0));
+        assertEquals(4, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
+                3.0));
+        assertEquals(4, RendererUtilities.findLiveItemsUpperBound(d, 4, 0.0,
+                4.0));
 
     }
 
@@ -435,7 +471,18 @@ public class RendererUtilitiesTests extends TestCase {
                 4.0));
         assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 4, 4.4,
                 5.0));
-    }
 
+        // check a series with repeating items
+        d.addSeries("S6", new double[][] {{3.0, 2.0, 2.0, 2.0, 1.0}, {2.0, 2.0,
+                2.0, 2.0, 2.0}});
+        assertEquals(4, RendererUtilities.findLiveItemsUpperBound(d, 5, 0.0,
+                5.0));
+        assertEquals(4, RendererUtilities.findLiveItemsUpperBound(d, 5, 1.0,
+                5.0));
+        assertEquals(3, RendererUtilities.findLiveItemsUpperBound(d, 5, 2.0,
+                5.0));
+        assertEquals(0, RendererUtilities.findLiveItemsUpperBound(d, 5, 3.0,
+                5.0));
+    }
 
 }
